--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,19 @@
 <resources>
     <string name="app_name">My Calculator</string>
+    <string name="key_one">1</string>
+    <string name="key_two">2</string>
+    <string name="key_three">3</string>
+    <string name="key_four">4</string>
+    <string name="key_five">5</string>
+    <string name="key_six">6</string>
+    <string name="key_seven">7</string>
+    <string name="key_eight">8</string>
+    <string name="key_nine">9</string>
+    <string name="key_dot">.</string>
+    <string name="key_zero">0</string>
+    <string name="key_plus">+</string>
+    <string name="key_minus">-</string>
+    <string name="key_devide">/</string>
+    <string name="key_multiply">*</string>
+    <string name="key_equals">=</string>
 </resources>
